// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alias botkit@npm:foo 1`] = `
{
  "fetchQuery": undefined,
  "name": "botkit",
  "operator": undefined,
  "result": {
    "escapedName": "botkit",
    "fetchSpec": null,
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "botkit",
    "raw": "botkit@npm:foo",
    "rawSpec": "npm:foo",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "subSpec": {
      "escapedName": "foo",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "foo",
      "raw": "foo",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "type": "alias",
    "where": undefined,
  },
  "semver": undefined,
}
`;

exports[`alias botkit@npm:foo@^12 1`] = `
{
  "fetchQuery": undefined,
  "name": "botkit",
  "operator": undefined,
  "result": {
    "escapedName": "botkit",
    "fetchSpec": null,
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "botkit",
    "raw": "botkit@npm:foo@^12",
    "rawSpec": "npm:foo@^12",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "subSpec": {
      "escapedName": "foo",
      "fetchSpec": "^12",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "foo",
      "raw": "foo@^12",
      "rawSpec": "^12",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "type": "alias",
    "where": undefined,
  },
  "semver": undefined,
}
`;

exports[`alias botkit@npm:foo@12 1`] = `
{
  "fetchQuery": undefined,
  "name": "botkit",
  "operator": undefined,
  "result": {
    "escapedName": "botkit",
    "fetchSpec": null,
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "botkit",
    "raw": "botkit@npm:foo@12",
    "rawSpec": "npm:foo@12",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "subSpec": {
      "escapedName": "foo",
      "fetchSpec": "12",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "foo",
      "raw": "foo@12",
      "rawSpec": "12",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "type": "alias",
    "where": undefined,
  },
  "semver": undefined,
}
`;

exports[`alias botkit@npm:foo@next 1`] = `
{
  "fetchQuery": undefined,
  "name": "botkit",
  "operator": undefined,
  "result": {
    "escapedName": "botkit",
    "fetchSpec": null,
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "botkit",
    "raw": "botkit@npm:foo@next",
    "rawSpec": "npm:foo@next",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "subSpec": {
      "escapedName": "foo",
      "fetchSpec": "next",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "foo",
      "raw": "foo@next",
      "rawSpec": "next",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "tag",
      "where": undefined,
    },
    "type": "alias",
    "where": undefined,
  },
  "semver": undefined,
}
`;

exports[`should return semver botkit@12 1`] = `
{
  "fetchQuery": true,
  "name": "botkit",
  "operator": undefined,
  "result": {
    "escapedName": "botkit",
    "fetchSpec": "12",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "botkit",
    "raw": "botkit@12",
    "rawSpec": "12",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
  "semver": "12",
}
`;

exports[`should return semver botkit@jonchurch/botkit#multi-hears 1`] = `
{
  "fetchQuery": undefined,
  "name": "botkit",
  "operator": undefined,
  "result": {
    "escapedName": "botkit",
    "fetchSpec": null,
    "gitCommittish": "multi-hears",
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "botkit",
    "raw": "botkit@jonchurch/botkit#multi-hears",
    "rawSpec": "jonchurch/botkit#multi-hears",
    "registry": undefined,
    "saveSpec": "github:jonchurch/botkit#multi-hears",
    "scope": undefined,
    "type": "git",
    "where": undefined,
  },
  "semver": "github:jonchurch/botkit#multi-hears",
}
`;

exports[`should return undefined botkit 1`] = `
{
  "fetchQuery": true,
  "name": "botkit",
  "operator": "^",
  "result": {
    "escapedName": "botkit",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "botkit",
    "raw": "botkit",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
  "semver": undefined,
}
`;

exports[`should return undefined botkit@^12 1`] = `
{
  "fetchQuery": true,
  "name": "botkit",
  "operator": "^",
  "result": {
    "escapedName": "botkit",
    "fetchSpec": "^12",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "botkit",
    "raw": "botkit@^12",
    "rawSpec": "^12",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
  "semver": undefined,
}
`;
